Fixed staff page spacing

--- a/src/scss/pages/_joinStaff.scss
+++ b/src/scss/pages/_joinStaff.scss
@@ -13,7 +13,7 @@
 }
 
 .staff-page-bottom-space {
-	padding-bottom: 386px;
+	padding-bottom: 377px;
 }
 
 // Divider
@@ -26,7 +26,7 @@
 // Title
 .title-font {
 	font-weight: bold;
-	font-size: 16px;
+	font-size: 22px;
 	color: $brandBlue;
 	display: inline-block;
 	padding: 30px;
